--- a/nginx.conf
+++ b/nginx.conf
@@ -3,26 +3,28 @@ events {
 }
 
 http {
-    server {
-        listen 80;
-#        server_name warehouse-riwu.onrender.com;
-  
-        root /var/www/public;
-        index index.php index.html;
+  server {
+    listen 80;
+   #  server_name eknexa.onrender.com;  
 
-        location / {
-            try_files $uri $uri/ /index.php?$query_string;
-        }
+    root /var/www/public;
+    index index.php index.html;
 
-        location ~ \.php$ {
-            include fastcgi_params;
-            fastcgi_pass 127.0.0.1:9000;
-            fastcgi_index index.php;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        }
-
-        location ~ /\.ht {
-            deny all;
-        }
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
     }
+
+    location ~ \.php$ {
+        include fastcgi_params;
+        fastcgi_pass 127.0.0.1:9000;
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+     #    fastcgi_param PHP_VALUE "upload_max_filesize=10M \n post_max_size=10M";  
+    }
+
+    location ~ /\.ht {
+        deny all;
+    }
+}
+
 }
